--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_local_notifications: ^16.3.2
   google_places_flutter: ^2.0.8
   google_maps_flutter: ^2.5.3
+  carousel_slider: ^4.2.1
 
   
 
